Fixed typo: dinamic --> dynamic

--- a/oncoFinder2/templates/document/ajax_pathway_detail.html
+++ b/oncoFinder2/templates/document/ajax_pathway_detail.html
@@ -4,7 +4,7 @@ AMCF = {{pathway.amcf}}
     <ul class="nav nav-tabs">
         <li ><a href="#fragment-1" data-toggle="tab"><span>Differential Genes </span></a></li>
         <li><a href="#fragment-2" data-toggle="tab"><span>Nodes and Components</span></a></li>
-        <li><a href="#fragment-3" data-toggle="tab"><span>Dinamic Graphic Scheme</span></a></li>
+        <li><a href="#fragment-3" data-toggle="tab"><span>Dynamic Graphic Scheme</span></a></li>
         <li class="active"><a href="#fragment-4" data-toggle="tab"><span>Static Graphic Scheme</span></a></li>
     </ul>
     <div id="tabContent" class="tab-content">
