--- a/oncoFinder2/templates/food/index.html
+++ b/oncoFinder2/templates/food/index.html
@@ -246,11 +246,11 @@ $(function() {
 	drawVenn({{report.id}},
 		'venn_meta-{{perm.strip}}-up',
 		'{{perm.strip}}',
-		true, 'up', 'venn_meta_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
+		true, 'up', 'venn_meta_dynamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
 	drawVenn({{report.id}},
 			'venn_meta-{{perm.strip}}-down',
 			'{{perm.strip}}',
-			true, 'down', 'venn_meta_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
+			true, 'down', 'venn_meta_dynamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
     {%endfor%}
 */
 });
