--- a/oncoFinder2/templates/website/bt_report.html
+++ b/oncoFinder2/templates/website/bt_report.html
@@ -236,7 +236,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
    <br/>
-  <div id="venn_gene_dinamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_ESvsANCvsCCL_tab">     <br/> 
@@ -253,7 +253,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_ESvsAECvsCCL_tab">     <br/> 
@@ -270,7 +270,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_ESvsABCvsCCL_tab">     <br/> 
@@ -287,7 +287,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
@@ -400,7 +400,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
    <br/>
-  <div id="venn_path_dinamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="ESvsANCvsCCL_tab">     <br/> 
@@ -417,7 +417,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="ESvsAECvsCCL_tab">     <br/> 
@@ -434,7 +434,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="ESvsABCvsCCL_tab">     <br/> 
@@ -451,7 +451,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   </div> <!-- end of path tab-content -->
 
@@ -503,7 +503,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
    <br/>
-  <div id="meta_venn_path_dinamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_ESvsASCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_ESvsANCvsCCL_tab">     <br/> 
@@ -520,7 +520,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_ESvsANCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_ESvsAECvsCCL_tab">     <br/> 
@@ -537,7 +537,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_ESvsAECvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_ESvsABCvsCCL_tab">     <br/> 
@@ -554,7 +554,7 @@ error rate and provides the ability to obtain functional features of intracellul
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_ESvsABCvsCCL" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   </div> <!-- end of path tab-content -->
  
