--- a/oncoFinder2/templates/website/demo2_report.html
+++ b/oncoFinder2/templates/website/demo2_report.html
@@ -204,7 +204,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="venn_gene_dinamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_Group1vsGroup5vsGroup6_tab">     <br/> 
@@ -221,7 +221,7 @@
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_Group1vsGroup4vsGroup6_tab">     <br/> 
@@ -238,7 +238,7 @@
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="gene_Group1vsGroup3vsGroup6_tab">     <br/> 
@@ -255,7 +255,7 @@
       </tr>
     </table>        
     
-  <div id="venn_gene_dinamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_gene_dynamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
@@ -320,7 +320,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="venn_path_dinamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="Group1vsGroup5vsGroup6_tab">     <br/> 
@@ -337,7 +337,7 @@
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="Group1vsGroup4vsGroup6_tab">     <br/> 
@@ -354,7 +354,7 @@
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="Group1vsGroup3vsGroup6_tab">     <br/> 
@@ -371,7 +371,7 @@
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   </div> <!-- end of path tab-content -->
 
@@ -423,7 +423,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="meta_venn_path_dinamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_Group1vsGroup2vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_Group1vsGroup5vsGroup6_tab">     <br/> 
@@ -440,7 +440,7 @@
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_Group1vsGroup5vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_Group1vsGroup4vsGroup6_tab">     <br/> 
@@ -457,7 +457,7 @@
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_Group1vsGroup4vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade " id="meta_Group1vsGroup3vsGroup6_tab">     <br/> 
@@ -474,7 +474,7 @@
       </tr>
     </table>        
     
-  <div id="meta_venn_path_dinamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="meta_venn_path_dynamic_Group1vsGroup3vsGroup6" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   </div> <!-- end of path tab-content -->
  
