--- a/oncoFinder2/templates/website/gp_report.html
+++ b/oncoFinder2/templates/website/gp_report.html
@@ -93,7 +93,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="venn_path_dinamic" class="" style="max-width:1000px;">
+  <div id="venn_path_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 1. Signaling pathways</h4>
     <table id="tbl-path_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -108,7 +108,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
@@ -126,7 +126,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="MCF7_venn_path_dinamic" class="" style="max-width:1000px;">
+  <div id="MCF7_venn_path_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 1. Signaling pathways</h4>
     <table id="MCF7_tbl-path_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -141,7 +141,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
@@ -179,7 +179,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="venn_meta_dinamic" class="" style="max-width:1000px;">
+  <div id="venn_meta_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 3. Metabolic pathways</h4>
     <table id="tbl-meta_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -194,7 +194,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   <div role="tabpanel" class="tab-pane fade in active " id="meta_MCF7_tab">     <br/> 
@@ -211,7 +211,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="MCF7_venn_meta_dinamic" class="" style="max-width:1000px;">
+  <div id="MCF7_venn_meta_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 2. Metabolic pathways</h4>
     <table id="meta_MCF7_tbl-path_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -226,7 +226,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   </div> <!-- end of path tab-content -->
@@ -262,7 +262,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="venn_age_dinamic" class="" style="max-width:1000px;">
+  <div id="venn_age_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 3. Aging pathways</h4>
     <table id="tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -277,7 +277,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
@@ -295,7 +295,7 @@
       </tr>
     </table>        
    <br/>
-  <div id="MCF7_venn_age_dinamic" class="" style="max-width:1000px;">
+  <div id="MCF7_venn_age_dynamic" class="" style="max-width:1000px;">
   
   <h4>Table 3. Aging pathways</h4>
     <table id="MCF7_tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -310,7 +310,7 @@
       </table>    
   
   
-  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div> <!--  div to place dynamic tables from Venn clicks -->
   </div>
   
   
