--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -293,10 +293,10 @@ The group of Extracellular remodeling pathways is activated in NHEK, while in Rh
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   
   <h4>Table 5. All</h4>
-      <table id="tbl-all" class="path table table-striped table-bordered path-dinamic" cellspacing="0" width="100%">
+      <table id="tbl-all" class="path table table-striped table-bordered path-dynamic" cellspacing="0" width="100%">
         <thead>
           <tr>
            <th>Pathway Name</th>
@@ -595,7 +595,7 @@ level. RhE type 2 samples are more similar to NHE on signaling and metabolic pat
        </td>
       </tr>
     </table>
-  <div id="venn_meta_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_meta_dynamic" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   <h4>Table 12. All</h4>
       <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
