--- a/oncoFinder2/templates/website/pathdemo_report.html
+++ b/oncoFinder2/templates/website/pathdemo_report.html
@@ -231,10 +231,10 @@
       </tr>
     </table>        
     
-  <div id="venn_path_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_path_dynamic" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   
   <h4>Table 5. All</h4>
-      <table id="tbl-all" class="path table table-striped table-bordered path-dinamic" cellspacing="0" width="100%">
+      <table id="tbl-all" class="path table table-striped table-bordered path-dynamic" cellspacing="0" width="100%">
         <thead>
           <tr>
            <th>Pathway Name</th>
@@ -521,7 +521,7 @@
        </td>
       </tr>
     </table>
-  <div id="venn_meta_dinamic" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  <div id="venn_meta_dynamic" class="" style="max-width:1000px;"></div> <!--  div to place dynamic tables from Venn clicks -->
   <h4>Table 12. All</h4>
       <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
