Fixed typo: ammount --> amount

--- a/oncoFinder2/templates/metabolism/pathway_list.html
+++ b/oncoFinder2/templates/metabolism/pathway_list.html
@@ -14,7 +14,7 @@
 
      </h1>
     <span class="text-muted">
-    Total ammount = <strong>{{allPathways}}</strong>  pathways
+    Total amount = <strong>{{allPathways}}</strong>  pathways
     </span>
     
         <div class="input-group col-lg-4 pull-right">
