--- a/oncoFinder2/templates/mouse/pathway_list.html
+++ b/oncoFinder2/templates/mouse/pathway_list.html
@@ -12,7 +12,7 @@
     </div> 
      </h1>
     <span class="text-muted">
-    Total ammount = <strong>{{allPathways}}</strong>  pathways | 
+    Total amount = <strong>{{allPathways}}</strong>  pathways |
     </span>
     <a href="/mouse/mapping/">Human-mouse genes mapping</a>
         <div class="input-group col-lg-4 pull-right">
