--- a/oncoFinder2/templates/housekeeping/index.html
+++ b/oncoFinder2/templates/housekeeping/index.html
@@ -28,7 +28,7 @@
       <input type="text" class="form-control" id="database-input">
     </div>
     <div class="form-group">
-      <button class="btn btn-primary" onclick="updatePathway()">Upload</button>
+      <button class="btn btn-primary" onclick="updatePathway()">Update</button>
     </div>
   </div>
   <div class="row">
