--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -25,8 +25,7 @@
     <script src="/static/js/jsNetworkx.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
-    
-    
+    <script src="/static/components/bootstrapx-clickover-bs3/js/bootstrapx-clickover.js"></script>
 </head>
 
 <body>
